Fixed spacing for recommendation text

--- a/PlanIT-Front-End-React/src/components/AnalyticsDashboard/AnalyticsDashboardStyle.css
+++ b/PlanIT-Front-End-React/src/components/AnalyticsDashboard/AnalyticsDashboardStyle.css
@@ -80,6 +80,10 @@
     overflow-y: auto;
 }
 
+.recText {
+    white-space: pre-line;
+}
+
 /* Setting things for tablet screens */
 @media screen and (min-width: 900px) {
     /* Setting the dashboard for tablet*/
